--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "create-react-class": "^15.6.3",
     "firebase": "^6.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-json-table": "^0.1.1",
+    "react-markdown": "^4.0.8",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "react-table": "^6.10.0",
     "recompose": "^0.30.0"
   },
   "scripts": {
