--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "create-react-class": "^15.6.3",
     "firebase": "^6.1.0",
     "react": "^16.8.6",
+    "react-countdown-now": "^2.1.0",
     "react-dom": "^16.8.6",
     "react-json-table": "^0.1.1",
     "react-markdown": "^4.0.8",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "react-select": "^3.0.4",
     "react-table": "^6.10.0",
     "recompose": "^0.30.0"
   },
