--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "create-react-class": "^15.6.3",
     "firebase": "^6.1.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-countdown-now": "^2.1.0",
     "react-dom": "^16.8.6",
     "react-json-table": "^0.1.1",
