--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-select": "^3.0.4",
-    "react-table": "^6.10.0",
-    "recompose": "^0.30.0"
+    "react-table": "^7.0.0-beta.12",
+    "recompose": "^0.30.0",
+    "styled-components": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
